[gd_scene load_steps=3 format=3 uid="uid://b5wsbousnpwq4"]

[ext_resource type="Script" path="res://scripts/ui/save_system/warning_dialog.gd" id="1_nfg2l"]
[ext_resource type="PackedScene" uid="uid://b4goedwokmaph" path="res://scenes/ui/menu_cursor.tscn" id="3_oprwr"]

[node name="WarningDialog" type="Panel"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -395.0
offset_top = -152.5
offset_right = 395.0
offset_bottom = 152.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nfg2l")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="WarningText" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
theme_override_font_sizes/font_size = 40
text = "Delete this save slot?"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5

[node name="YesButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_left = NodePath("../NoButton")
focus_neighbor_top = NodePath("../NoButton")
focus_neighbor_right = NodePath("../NoButton")
focus_neighbor_bottom = NodePath("../NoButton")
focus_next = NodePath("../NoButton")
focus_previous = NodePath("../NoButton")
theme_override_font_sizes/font_size = 40
text = "Yes"

[node name="NoButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_left = NodePath("../YesButton")
focus_neighbor_top = NodePath("../YesButton")
focus_neighbor_right = NodePath("../YesButton")
focus_neighbor_bottom = NodePath("../YesButton")
focus_next = NodePath("../YesButton")
focus_previous = NodePath("../YesButton")
theme_override_font_sizes/font_size = 40
text = "No"

[node name="MenuCursor" parent="." node_paths=PackedStringArray("focus_node") instance=ExtResource("3_oprwr")]
unique_name_in_owner = true
layout_mode = 0
menu_parent_path = NodePath("../VBoxContainer/HBoxContainer")
focus_node = NodePath("../VBoxContainer/HBoxContainer/NoButton")

[connection signal="pressed" from="VBoxContainer/HBoxContainer/YesButton" to="." method="_on_yes_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/NoButton" to="." method="_on_no_button_pressed"]
